# pneumoniaCNN

./: .gitignore  Pneumonia.ipynb  README.md  back.py  index.html  pyproject.toml
